--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,9 @@ pipeline {
                     sh 'echo Main-Class: Rectangulator > MANIFEST.MF'
                     sh 'jar -cvmf MANIFEST.MF rectangle.jar *.class'
               }
+              steps {
+                    sh 'java -jar rectangle.jar 7 9'
+              }
         }
     }
 }
