--- a/jenkinsfile
+++ b/jenkinsfile
@@ -6,9 +6,12 @@ pipeline {
                     sh 'javac -d . src/*.java'
                     sh 'echo Main-Class: Rectangulator > MANIFEST.MF'
                     sh 'jar -cvmf MANIFEST.MF rectangle.jar *.class'
+                    }
               }
+        stage('run') {
               steps {
                     sh 'java -jar rectangle.jar 7 9'
+                    }
               }
         }
     }
