--- a/jenkinsfile
+++ b/jenkinsfile
@@ -16,7 +16,7 @@ pipeline {
         }
         post{
             success{
-                archiveArtifacts artifacts: 'rectangule.jar', fingerprint: true
+                archiveArtifacts artifacts: 'rectangle.jar', fingerprint: true
             }
         }
 
