--- a/jenkinsfile
+++ b/jenkinsfile
@@ -13,6 +13,11 @@ pipeline {
                     sh 'java -jar rectangle.jar 7 9'
                     }
               }
+        stage('comment') {
+              steps {
+                    sh 'echo "This is good"'
+              }
+            }
         }
         post{
             success{
