--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent any
+    options{
+    buildDiscarder(logRotator(numToKeepStr: '3'))
+    }
     stages{
         stage('build') {
               steps {
